# btc-signal-bot

./: pyproject.toml  render.yaml  signals.db
app/: config.py  main.py  models.py
app/api/: routes.py  websocket.py
app/indicators/: onchain.py  sentiment.py  technical.py
app/services/: binance_client.py  data_manager.py  database.py
app/signals/: engine.py
static/css/: styles.css
static/js/: dashboard.js
templates/: index.html
