[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btc-signal-bot"
version = "1.0.0"
description = "BTC Signal Bot with 15+ indicators, on-chain & sentiment analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "ccxt>=4.0.0",
    "pandas>=2.1.0",
    "ta>=0.11.0",
    "numpy>=1.24.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "websockets>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
